Adding SV and ES to ubuntu test

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -59,7 +59,7 @@ jobs:
           mkdir -p  ~/Desktop/workshop-2019
           mkdir build
           cd build
-          cmake -DPGR_WORKSHOP_DEBUG=ON ..
+          cmake -DPGR_WORKSHOP_DEBUG=ON -DES=ON -DSV=ON ..
           psql -l
         env:
           POSTGRES_HOST: localhost
