Adjusting build and doc because of name changes

--- a/docs/scripts/basic/CMakeLists.txt
+++ b/docs/scripts/basic/CMakeLists.txt
@@ -5,7 +5,7 @@ add_custom_target(basic_scripts ALL)
 #---------------------
 SET(PGR_WORKSHOP_DIR
   data
-  chapter_5
+  pedestrian
   chapter_6
   chapter_7
   chapter_8
@@ -19,7 +19,7 @@ foreach (d ${PGR_WORKSHOP_DIR})
     add_dependencies(basic_scripts basic_${d}_scripts)
 endforeach()
 
-add_dependencies(basic_chapter_5_scripts basic_data_scripts)
-add_dependencies(basic_chapter_6_scripts basic_chapter_5_scripts)
+add_dependencies(basic_pedestrian_scripts basic_data_scripts)
+add_dependencies(basic_chapter_6_scripts basic_pedestrian_scripts)
 add_dependencies(basic_chapter_7_scripts basic_chapter_6_scripts)
 add_dependencies(basic_chapter_8_scripts basic_chapter_7_scripts)
