--- a/docs/scripts/basic/pedestrian/CMakeLists.txt
+++ b/docs/scripts/basic/pedestrian/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_custom_target(basic_chapter_5_scripts)
+add_custom_target(basic_pedestrian_scripts)
 
 #---------------------
 # Files
 #---------------------
 set(PGR_WORKSHOP_FILES
-  "all_exercises_5.sql"
+  "pedestrian.sql"
   "images.sql"
     )
 
@@ -16,7 +16,7 @@ foreach (f ${PGR_WORKSHOP_FILES})
 endforeach()
 
 add_custom_command(
-  TARGET basic_chapter_5_scripts
+  TARGET basic_pedestrian_scripts
   PRE_BUILD
   BYPRODUCTS
     exercise_5_1.txt
@@ -25,9 +25,9 @@ add_custom_command(
     exercise_5_4.txt
     exercise_5_5.txt
     exercise_5_6.txt
-  COMMAND psql -d city_routing -f all_exercises_5.sql
+  COMMAND psql -d city_routing -f pedestrian.sql
   COMMAND psql -d city_routing -f images.sql
-  COMMENT "running chapter 5 scripts"
-  DEPENDS all_exercises_5.sql
+  COMMENT "running pedestrian scripts"
+  DEPENDS pedestrian.sql
   )
 
