Adjusting build and doc because of name changes

--- a/docs/scripts/basic/CMakeLists.txt
+++ b/docs/scripts/basic/CMakeLists.txt
@@ -6,7 +6,7 @@ add_custom_target(basic_scripts ALL)
 SET(PGR_WORKSHOP_DIR
   data
   pedestrian
-  chapter_6
+  vehicles
   chapter_7
   chapter_8
 )
@@ -20,6 +20,6 @@ foreach (d ${PGR_WORKSHOP_DIR})
 endforeach()
 
 add_dependencies(basic_pedestrian_scripts basic_data_scripts)
-add_dependencies(basic_chapter_6_scripts basic_pedestrian_scripts)
-add_dependencies(basic_chapter_7_scripts basic_chapter_6_scripts)
+add_dependencies(basic_vehicles_scripts basic_pedestrian_scripts)
+add_dependencies(basic_chapter_7_scripts basic_vehicles_scripts)
 add_dependencies(basic_chapter_8_scripts basic_chapter_7_scripts)
