Separating code that belongs to graphs from chapter_7

--- a/docs/scripts/basic/CMakeLists.txt
+++ b/docs/scripts/basic/CMakeLists.txt
@@ -7,6 +7,7 @@ SET(PGR_WORKSHOP_DIR
   data
   pedestrian
   vehicles
+  graphs
   chapter_7
   plpgsql_function
 )
@@ -22,4 +23,5 @@ endforeach()
 add_dependencies(basic_pedestrian_scripts basic_data_scripts)
 add_dependencies(basic_vehicles_scripts basic_pedestrian_scripts)
 add_dependencies(basic_chapter_7_scripts basic_vehicles_scripts)
+add_dependencies(basic_chapter_7_scripts basic_graphs_scripts)
 add_dependencies(basic_plpgsql_function_scripts basic_chapter_7_scripts)
