Adjusting build and doc because of name changes & separation

--- a/docs/basic/CMakeLists.txt
+++ b/docs/basic/CMakeLists.txt
@@ -9,7 +9,7 @@ set(PGR_WORKSHOP_FILES
   data.rst
   pedestrian.rst
   vehicle.rst
-  graph_views.rst
+  graphs.rst
   sql_function.rst
   plpgsql_function.rst
   )
