(CI) adding gettext

--- a/.github/workflows/locale.yml
+++ b/.github/workflows/locale.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y osm2pgrouting \
+            gettext \
             postgresql-${PGVER}-postgis-${PGIS} \
             postgresql-${PGVER}-postgis-${PGIS}-scripts \
             postgresql-${PGVER}-pgrouting
