(reorganize) graphs chapter comes after data chapter

--- a/docs/scripts/basic/CMakeLists.txt
+++ b/docs/scripts/basic/CMakeLists.txt
@@ -5,9 +5,9 @@ add_custom_target(basic_scripts ALL)
 #---------------------
 SET(PGR_WORKSHOP_DIR
   data
+  graphs
   pedestrian
   vehicles
-  graphs
   sql_function
   plpgsql_function
 )
@@ -20,8 +20,9 @@ foreach (d ${PGR_WORKSHOP_DIR})
     add_dependencies(basic_scripts basic_${d}_scripts)
 endforeach()
 
-add_dependencies(basic_pedestrian_scripts basic_data_scripts)
-add_dependencies(basic_vehicles_scripts basic_pedestrian_scripts)
-add_dependencies(basic_sql_function_scripts basic_vehicles_scripts)
+add_dependencies(basic_graphs_scripts basic_data_scripts)
+add_dependencies(basic_pedestrian_scripts basic_graphs_scripts)
+add_dependencies(basic_vehicles_scripts basic_graphs_scripts)
 add_dependencies(basic_sql_function_scripts basic_graphs_scripts)
+add_dependencies(basic_sql_function_scripts basic_vehicles_scripts)
 add_dependencies(basic_plpgsql_function_scripts basic_sql_function_scripts)
