(basic/data) Cleanup scripts

--- a/docs/scripts/basic/data/CMakeLists.txt
+++ b/docs/scripts/basic/data/CMakeLists.txt
@@ -1,22 +1,11 @@
-#---------------------
-# Files
-#---------------------
-set(PGR_WORKSHOP_FILES
-  "data.sh"
-)
-
-foreach (f ${PGR_WORKSHOP_FILES})
-    if (PGR_WORKSHOP_VERBOSE_DEBUG)
-        message(STATUS "    Adding file ${f}")
-    endif()
-    configure_file(${f} ${f})
-endforeach()
+# Script for basic/data chapter
+configure_file(data.sh data.sh)
 
 add_custom_command(
   OUTPUT data.txt
   COMMAND bash data.sh > data.txt
-  )
+)
 
 add_custom_target(basic_data_scripts
   DEPENDS "data.txt"
-  )
+)
