(basic/graphs) Creating and adjusting images

--- a/docs/basic/images/CMakeLists.txt
+++ b/docs/basic/images/CMakeLists.txt
@@ -16,8 +16,11 @@ set(PGR_WORKSHOP_IMG_SUBDIRS
 #---------------------------------------------
 
 foreach (dir ${PGR_WORKSHOP_IMG_SUBDIRS})
-  file(COPY "${dir}" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
   if (PGR_WORKSHOP_DEBUG)
-    message(STATUS "   Adding images directory ${dir}")
+    message(STATUS "   -> basic/images/${dir}")
+  endif()
+  add_subdirectory("${dir}")
+  if (PGR_WORKSHOP_DEBUG)
+    message(STATUS "   <- basic/images/${dir}")
   endif()
 endforeach()
