--- a/docs/basic/images/graphs/CMakeLists.txt
+++ b/docs/basic/images/graphs/CMakeLists.txt
@@ -3,17 +3,18 @@
 # Files
 #---------------------
 set(PGR_WORKSHOP_IMG_FILES
-  ch7-e3.png
+  costMatrix.png
+  pedestrian_only_roads.png
+  roads_tag_ids.png
+  taxi_net.png
   vehicle_net.png
   walk_net.png
-  taxi_net.png
-  )
+)
 
 
 foreach (f ${PGR_WORKSHOP_IMG_FILES})
   if (PGR_WORKSHOP_VERBOSE_DEBUG)
-    message(STATUS "    Adding file ${f}")
+    message(STATUS "      -> ${f}")
   endif()
-  FILE(COPY ${f} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+  configure_file(${f} ${f} COPYONLY)
 endforeach()
-
