(CI) building the doc/website

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Build
         run: |
           cd build
-          make -j 4
+          make doc
 
       - name: Initialize mandatory git config
         run: |
@@ -95,7 +95,7 @@ jobs:
           if [[ "${{ env.BRANCH }}" == "develop" ]]; then
             FOLDER_NAME="dev"
           elif [[ "${{ env.BRANCH }}" == "main" ]]; then
-            FOLDER_NAME="3.0"
+            FOLDER_NAME="3.1"
           fi
           git checkout -f origin/gh-pages
           git checkout -b gh-pages
